Fix issue with media link tooltips overflowing

--- a/scss/layout/_media-links.scss
+++ b/scss/layout/_media-links.scss
@@ -31,6 +31,11 @@
 			}
 
 			.tooltip {
+				@include md {
+					display: block;
+				}
+
+				display: none;
 				visibility: hidden;
 				opacity: 0;
 				white-space: nowrap;
